// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comment expansion > should allow additional rules, and they should override those provided by mdat readme 1`] = `
"<!--+ Warning: Content inside HTML comment blocks was generated by mdat and may be overwritten. +-->

<!-- title {prefix: '📝 '} -->

# \`extra-rules.js\` has overridden the title

<!-- /title -->

<!-- banner -->

<!-- badges {custom: {Documentation: {image: "https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs&logoColor=222222", link: "https://kitschpatrol.com/svelte-tweakpane-ui"}}} -->

[![NPM Package mdat](https://img.shields.io/npm/v/mdat.svg)](https://npmjs.com/package/mdat)
[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
[![Documentation](https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs\\&logoColor=222222)](https://kitschpatrol.com/svelte-tweakpane-ui)

<!-- /badges -->

<!-- short-description -->

**CLI tool and library for using comments as content templates in Markdown files, with helpful presets for readmes.**

<!-- /short-description -->

<!-- table-of-contents -->

## Table of contents

- [Example code](#example-code)
- [Prefix example](#prefix-example)
- [Extra rules example](#extra-rules-example)
- [Contributing](#contributing)
- [License](#license)

<!-- /table-of-contents -->

A long description goes here.

## Example code

The code block below was dynamically embedded by MDAT.

<!-- code {file: "./test/assets/extra-rules.js"} -->

\`\`\`.js
// This is a code sample for testing purposes
// There doesn't seem to be a way to type a default export in JSDoc

/** @satisfies {import('../../src/lib/rules').Rules} */
const rules = {
	extra: '**A bold statement from extra-rules.js**',
	title: {
		applicationOrder: 2,
		content: '# \`extra-rules.js\` has overridden the title',
	},
}

export default rules

\`\`\`

<!-- /code -->

## Prefix example

The comment below only expands if \`--prefix mm-\` was set:

<!-- mm-short-description  -->

## Extra rules example

The comment below only expands if \`--rules extra-rules.js\` was set:

<!-- extra -->

**A bold statement from extra-rules.js**

<!-- /extra -->

<!-- contributing -->

## Contributing

[Issues](https://github.com/kitschpatrol/mdat/issues) and pull requests are welcome.

<!-- /contributing -->

<!-- license -->

## License

[MIT](license.txt) © Eric Mika

<!-- /license -->
"
`;

exports[`comment expansion > should exclude the meta tag if asked 1`] = `
"<!-- title {prefix: '📝 '} -->

# 📝 mdat

<!-- /title -->

<!-- banner -->

<!-- badges {custom: {Documentation: {image: "https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs&logoColor=222222", link: "https://kitschpatrol.com/svelte-tweakpane-ui"}}} -->

[![NPM Package mdat](https://img.shields.io/npm/v/mdat.svg)](https://npmjs.com/package/mdat)
[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
[![Documentation](https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs\\&logoColor=222222)](https://kitschpatrol.com/svelte-tweakpane-ui)

<!-- /badges -->

<!-- short-description -->

**CLI tool and library for using comments as content templates in Markdown files, with helpful presets for readmes.**

<!-- /short-description -->

<!-- table-of-contents -->

## Table of contents

- [Example code](#example-code)
- [Prefix example](#prefix-example)
- [Extra rules example](#extra-rules-example)
- [Contributing](#contributing)
- [License](#license)

<!-- /table-of-contents -->

A long description goes here.

## Example code

The code block below was dynamically embedded by MDAT.

<!-- code {file: "./test/assets/extra-rules.js"} -->

\`\`\`.js
// This is a code sample for testing purposes
// There doesn't seem to be a way to type a default export in JSDoc

/** @satisfies {import('../../src/lib/rules').Rules} */
const rules = {
	extra: '**A bold statement from extra-rules.js**',
	title: {
		applicationOrder: 2,
		content: '# \`extra-rules.js\` has overridden the title',
	},
}

export default rules

\`\`\`

<!-- /code -->

## Prefix example

The comment below only expands if \`--prefix mm-\` was set:

<!-- mm-short-description  -->

## Extra rules example

The comment below only expands if \`--rules extra-rules.js\` was set:

<!-- extra -->

<!-- contributing -->

## Contributing

[Issues](https://github.com/kitschpatrol/mdat/issues) and pull requests are welcome.

<!-- /contributing -->

<!-- license -->

## License

[MIT](license.txt) © Eric Mika

<!-- /license -->
"
`;

exports[`comment expansion > should expand prefixed comments only 1`] = `
"<!--+ Warning: Content inside HTML comment blocks was generated by mdat and may be overwritten. +-->

<!-- title {prefix: '📝 '} -->

<!-- banner -->

<!-- badges {custom: {Documentation: {image: "https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs&logoColor=222222", link: "https://kitschpatrol.com/svelte-tweakpane-ui"}}} -->

<!-- short-description -->

<!-- table-of-contents -->

A long description goes here.

## Example code

The code block below was dynamically embedded by MDAT.

<!-- code {file: "./test/assets/extra-rules.js"} -->

## Prefix example

The comment below only expands if \`--prefix mm-\` was set:

<!-- mm-short-description  -->

**CLI tool and library for using comments as content templates in Markdown files, with helpful presets for readmes.**

<!-- /mm-short-description -->

## Extra rules example

The comment below only expands if \`--rules extra-rules.js\` was set:

<!-- extra -->

<!-- contributing -->

<!-- license -->
"
`;

exports[`comment expansion > should expand readme comments 1`] = `
"<!--+ Warning: Content inside HTML comment blocks was generated by mdat and may be overwritten. +-->

<!-- title {prefix: '📝 '} -->

# 📝 mdat

<!-- /title -->

<!-- banner -->

<!-- badges {custom: {Documentation: {image: "https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs&logoColor=222222", link: "https://kitschpatrol.com/svelte-tweakpane-ui"}}} -->

[![NPM Package mdat](https://img.shields.io/npm/v/mdat.svg)](https://npmjs.com/package/mdat)
[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
[![Documentation](https://img.shields.io/badge/-documentation-ffdd00?logo=readthedocs\\&logoColor=222222)](https://kitschpatrol.com/svelte-tweakpane-ui)

<!-- /badges -->

<!-- short-description -->

**CLI tool and library for using comments as content templates in Markdown files, with helpful presets for readmes.**

<!-- /short-description -->

<!-- table-of-contents -->

## Table of contents

- [Example code](#example-code)
- [Prefix example](#prefix-example)
- [Extra rules example](#extra-rules-example)
- [Contributing](#contributing)
- [License](#license)

<!-- /table-of-contents -->

A long description goes here.

## Example code

The code block below was dynamically embedded by MDAT.

<!-- code {file: "./test/assets/extra-rules.js"} -->

\`\`\`.js
// This is a code sample for testing purposes
// There doesn't seem to be a way to type a default export in JSDoc

/** @satisfies {import('../../src/lib/rules').Rules} */
const rules = {
	extra: '**A bold statement from extra-rules.js**',
	title: {
		applicationOrder: 2,
		content: '# \`extra-rules.js\` has overridden the title',
	},
}

export default rules

\`\`\`

<!-- /code -->

## Prefix example

The comment below only expands if \`--prefix mm-\` was set:

<!-- mm-short-description  -->

## Extra rules example

The comment below only expands if \`--rules extra-rules.js\` was set:

<!-- extra -->

<!-- contributing -->

## Contributing

[Issues](https://github.com/kitschpatrol/mdat/issues) and pull requests are welcome.

<!-- /contributing -->

<!-- license -->

## License

[MIT](license.txt) © Eric Mika

<!-- /license -->
"
`;
